# pam-once

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac  pam-once.pc.in
debian/: changelog  control  copyright  pam-once-dev.install  pam-once-dev.links  pam-once0.install  rules
include/: pam-once.h
src/: common.h  pam-once.c  pam_once.c  po_count.c
